# streamlit_for_data_science_book

./: README.md  pyproject.toml
clt_app/: clt_demo.py
components_example/: app.py
components_example/pages/: agreed.py  folium_map.py  penguin_animated.py  penguin_profiled .py  plotly_events.py
database_examples/: bigquery_app.py  snowflake_app.py
job_application_examples/: job_streamlit.py
penguin_app/: penguins.py
penguin_ml/: hugging_face_sentiment.py  openai_sentiment.py  penguins_ml.py  penguins_streamlit.py  rf_penguin.pickle
plotting_app/: plot_demo.py
pretty_trees/: pretty_trees.py  trees_altered.csv
pretty_trees/pages/: data_quality.py  map.py
streamlit_goodreads_book/: goodreads_app.py
trees_app/: trees.py
trees_app/.streamlit/: config.toml
