[tool.poetry]
name = "streamlit-for-data-science"
version = "0.1.0"
description = ""
authors = ["sertemo <tejedor.moreno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.30.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
plotly = "^5.18.0"
bokeh = "2.4.3"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
