[tool.poetry]
name = "streamlit-for-data-science"
version = "0.1.0"
description = ""
authors = ["sertemo <tejedor.moreno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
streamlit = "^1.30.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.2"
plotly = "^5.18.0"
bokeh = "2.4.3"
scikit-learn = "^1.4.0"
torch = "^2.2.0"
transformers = "^4.37.2"
python-dotenv = "^1.0.1"
openai = "^1.12.0"
streamlit-aggrid = "^0.3.4.post3"
streamlit-plotly-events = "^0.0.6"
streamlit-lottie = "^0.0.5"
streamlit-pandas-profiling = "^0.1.3"
streamlit-folium = "^0.18.0"
streamlit-extras = "^0.4.0"
snowflake-connector-python = "^3.7.1"
google-cloud-bigquery = "^3.17.2"
db-dtypes = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
